# Snake-Tetris

./: README.md
src/: Makefile  brick_config
src/brick_game/snake/: declarations.h  main.md  snake.cpp  snake.h
src/brick_game/tetris/: allShapes.h  controller.cpp  controller.h  declarations.h  model.h  tetris.cpp  tetris.h
src/gui/cli/: main.cpp  view.cpp  view.h
src/gui/desctop/View/: CMakeLists.txt  main.cpp  view.cpp  view.h  view.ui
src/test/: googletest.cpp  googletest.h
